test/negative/dynamic_field_unop/compile.hxml
-cp .
-lib reflaxe.rust
-D reflaxe_rust_profile=portable
-D rust_codegen_only
-D rust_output=out
-main Main
